tests/kubeit-deployment-chart/deploy.result.yaml
---
# Source: kubeit-deployment-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  labels:
    app: test
    app.kubernetes.io/name: test
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test
      app.kubernetes.io/name: test
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app: test
        app.kubernetes.io/name: test
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        some-label: some-value
      annotations:
        new-annotation: new-value
        some-annotation: some-value
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      containers:
        - name: test
          image: nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: tcp
              containerPort: 80
              protocol: TCP
          securityContext:
            fsGroup: 2000
            runAsGroup: 3000
            runAsUser: 1000
          resources:
            limits:
              memory: 64Mi
            requests:
              cpu: 10m
              memory: 64Mi
          env:
            - name: ENV_VAR_1
              value: value1
            - name: ENV_VAR_2
              value: value2
          envFrom:
            - configMapRef:
                name: my-config-map
            - secretRef:
                name: my-secret
          livenessProbe:
            httpGet:
              httpHeaders:
              - name: Custom-Header
                value: Awesome
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
      nodeSelector:
        cpu: high
        disktype: ssd
      tolerations:
        - effect: NoSchedule
          key: key1
          operator: Equal
          value: value1
        - key: key2
          operator: Exists
