tests/kubeit-deployment-chart/empty.result.yaml
---
# Source: kubeit-deployment-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kubeit-deployment-chart
  labels:
    app: kubeit-deployment-chart
    app.kubernetes.io/name: kubeit-deployment-chart
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeit-deployment-chart
      app.kubernetes.io/name: kubeit-deployment-chart
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app: kubeit-deployment-chart
        app.kubernetes.io/name: kubeit-deployment-chart
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: kubeit-deployment-chart
          image: nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: tcp
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: 64Mi
            requests:
              cpu: 10m
              memory: 64Mi
