tests/kubeit-deployment-chart/sessionmanager.result.yaml
---
# Source: kubeit-deployment-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  labels:
    app.kubernetes.io/name: test
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    tenant: tenant
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: test
    app.kubernetes.io/instance: release-name
---
# Source: kubeit-deployment-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  labels:
    app.kubernetes.io/name: test
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    tenant: tenant
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: test
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: test
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        tenant: tenant
        session-management: backend
        session-manager-name: test
    spec:
      securityContext:
        runAsGroup: 101
        runAsNonRoot: true
        runAsUser: 101
      terminationGracePeriodSeconds: 30
      containers:
        - name: test
          image: nginxinc/nginx-unprivileged:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            runAsGroup: 101
            runAsNonRoot: true
            runAsUser: 101
          resources:
            limits:
              memory: 64Mi
            requests:
              cpu: 10m
              memory: 64Mi
          env:
            - name: CLIENT_ID
              value: "test"
            - name: SESSION_MANAGER_ID
              value: "test"
---
# Source: kubeit-deployment-chart/templates/destinationrules.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: test-dr
  labels:
    app.kubernetes.io/name: test
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    tenant: tenant
spec:
  host: test.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: onegateway_sessid
          ttl: 0s
    tls:
      mode: ISTIO_MUTUAL
---
# Source: kubeit-deployment-chart/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: test-green-we-nonprod-kubeit-dnv-com-ext
  labels:
    app.kubernetes.io/name: test
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    tenant: tenant
spec:
  hosts:
    - test.green.we.nonprod.kubeit.dnv.com
  gateways:
    - istio-system/global-https-internal-default-gateway
  http:
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: test.default.svc.cluster.local
            port:
              number: 8080
---
# Source: kubeit-deployment-chart/templates/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: test-mesh
spec:
  hosts:
    - test.default.svc.cluster.local
  gateways:
    - mesh
  http:
    - route:
      - destination:
          host: test.default.svc.cluster.local
